automation.log
/home/tyler/Dev/evofutura/scripts/automate.js:52
```typescript
   ^^^^^^^^^^

SyntaxError: Unexpected identifier
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1274:20)
    at Module._compile (node:internal/modules/cjs/loader:1320:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1414:10)
    at Module.load (node:internal/modules/cjs/loader:1197:32)
    at Module._load (node:internal/modules/cjs/loader:1013:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:128:12)
    at node:internal/main/run_main_module:28:49

Node.js v18.19.1
[dotenv@17.2.4] injecting env (0) from .env -- tip: ⚙️  specify custom .env file path with { path: '/custom/path/.env' }

[2026-02-08T08:00:01.941Z] 🚀 Starting Autonomous Content Pipeline...
🎯 Targeted Topic: Platform Engineering vs Traditional SRE (DevOps)
🔍 Scoring content for technical accuracy and SEO...
⚠️ Score too low (81). Regenerating...

[2026-02-08T08:00:01.943Z] 🚀 Starting Autonomous Content Pipeline...
🎯 Targeted Topic: Foundation Models for Vertical Industries (AI)
🔍 Scoring content for technical accuracy and SEO...
✅ Content Approved (Score: 98). Publishing...
🎉 Success! Article live at: /blog/foundation-models-for-vertical-industries-792
[dotenv@17.2.4] injecting env (0) from .env -- tip: 🔄 add secrets lifecycle management: https://dotenvx.com/ops

[2026-02-09T08:00:02.275Z] 🚀 Starting Autonomous Content Pipeline...
🎯 Targeted Topic: Battery-efficient Mobile Architecture (Mobile)
🔍 Scoring content for technical accuracy and SEO...
✅ Content Approved (Score: 88). Publishing...
🎉 Success! Article live at: /blog/battery-efficient-mobile-architecture-274
[dotenv@17.2.4] injecting env (0) from .env -- tip: ✅ audit secrets and track compliance: https://dotenvx.com/ops

[2026-02-10T08:00:02.831Z] 🚀 Starting Autonomous Content Pipeline...
🎯 Targeted Topic: Modern CSS: Cascade Layers and Subgrid (WebDev)
🔍 Scoring content for technical accuracy and SEO...
✅ Content Approved (Score: 87). Publishing...
🎉 Success! Article live at: /blog/modern-css-cascade-layers-and-subgrid-364
[dotenv@17.2.4] injecting env (0) from .env -- tip: ⚙️  enable debug logging with { debug: true }

[2026-02-11T08:00:01.442Z] 🚀 Starting Autonomous Content Pipeline...
🎯 Targeted Topic: Multi-agent Autonomous Workflows (Agentic AI) (AI)
🔍 Scoring content for technical accuracy and SEO...
✅ Content Approved (Score: 99). Publishing...
🎉 Success! Article live at: /blog/multi-agent-autonomous-workflows-agentic-ai--646
[dotenv@17.2.4] injecting env (0) from .env -- tip: 🔐 prevent building .env in docker: https://dotenvx.com/prebuild

[2026-02-12T08:00:01.557Z] 🚀 Starting Autonomous Content Pipeline...
🎯 Targeted Topic: Large Reasoning Models (LRMs) vs Traditional LLMs (AI)
🔍 Scoring content for technical accuracy and SEO...
✅ Content Approved (Score: 91). Publishing...
🎉 Success! Article live at: /blog/large-reasoning-models-lrms-vs-traditional-llms-901
[dotenv@17.2.4] injecting env (0) from .env -- tip: ✅ audit secrets and track compliance: https://dotenvx.com/ops

[2026-02-13T08:00:01.759Z] 🚀 Starting Autonomous Content Pipeline...
🎯 Targeted Topic: React Server Components Architecture (WebDev)
🔍 Scoring content for technical accuracy and SEO...
✅ Content Approved (Score: 94). Publishing...
🎉 Success! Article live at: /blog/react-server-components-architecture-695
[dotenv@17.2.4] injecting env (0) from .env -- tip: ⚙️  override existing env vars with { override: true }

[2026-02-14T08:00:02.360Z] 🚀 Starting Autonomous Content Pipeline...
🎯 Targeted Topic: AI-driven CI/CD Pipeline Optimization (DevOps)
🔍 Scoring content for technical accuracy and SEO...
✅ Content Approved (Score: 97). Publishing...
🎉 Success! Article live at: /blog/ai-driven-ci-cd-pipeline-optimization-912
[dotenv@17.2.4] injecting env (0) from .env -- tip: ⚙️  specify custom .env file path with { path: '/custom/path/.env' }

[2026-02-15T08:00:01.500Z] 🚀 Starting Autonomous Content Pipeline...
🎯 Targeted Topic: Cloud-native Databases: NewSQL vs Distributed SQL (Cloud)
🔍 Scoring content for technical accuracy and SEO...
✅ Content Approved (Score: 97). Publishing...
🎉 Success! Article live at: /blog/cloud-native-databases-newsql-vs-distributed-sql-208
[dotenv@17.2.4] injecting env (0) from .env -- tip: 👥 sync secrets across teammates & machines: https://dotenvx.com/ops

[2026-02-16T08:00:01.997Z] 🚀 Starting Autonomous Content Pipeline...
🎯 Targeted Topic: Service Mesh Evolution: Ambient Mesh Patterns (Cloud)
🔍 Scoring content for technical accuracy and SEO...
✅ Content Approved (Score: 97). Publishing...
🎉 Success! Article live at: /blog/service-mesh-evolution-ambient-mesh-patterns-670
[dotenv@17.2.4] injecting env (0) from .env -- tip: 🔄 add secrets lifecycle management: https://dotenvx.com/ops

[2026-02-16T08:00:02.063Z] 🚀 Starting Autonomous Content Pipeline...
🎯 Targeted Topic: AI-driven CI/CD Pipeline Optimization (DevOps)
🔍 Scoring content for technical accuracy and SEO...
⚠️ Score too low (82). Regenerating...

[2026-02-16T08:00:02.066Z] 🚀 Starting Autonomous Content Pipeline...
🎯 Targeted Topic: Cross-platform Native: Flutter vs React Native (Mobile)
🔍 Scoring content for technical accuracy and SEO...
⚠️ Score too low (84). Regenerating...

[2026-02-16T08:00:02.066Z] 🚀 Starting Autonomous Content Pipeline...
🎯 Targeted Topic: Graph Databases for Complex Relationships (Data)
🔍 Scoring content for technical accuracy and SEO...
✅ Content Approved (Score: 97). Publishing...
🎉 Success! Article live at: /blog/graph-databases-for-complex-relationships-863
